--- a/02counter/src/index.css
+++ b/02counter/src/index.css
@@ -15,7 +15,7 @@
 
 a {
   font-weight: 500;
-  color: #111112;
+  color: #0f0f78;
   text-decoration: inherit;
 }
 a:hover {
@@ -32,7 +32,7 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1.2;
 }
 
 button {
